apps/dci/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esports
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: esports-tls
      hosts:
        - dci2026-67.etsmtl.club
  rules:
    - host: dci2026-67.etsmtl.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dci-svc
                port:
                  number: 80
